# rag-pgvector-system-project

./: README.md  docker-compose.yml  pyproject.toml
apis/: main.py
apis/dependencies/: database.py
apis/endpoints/: audit.py  chat.py  knowledge.py  status.py
apis/models/: requests.py  response.py  responses.py
chatbot/: embeddings.py  llm.py  retrieval.py  vector_store.py
chatbot/agents/: workflow.py
chatbot/agents/base/: flow.py
chatbot/agents/postprocess/: flow.py  func.py
chatbot/agents/primary_answer_query/: flow.py  func.py
chatbot/agents/sensitive_check/: flow.py  func.py
database/: connection.py  schema.sql
docker/: Dockerfile  init.sql
services/: audit_service.py  chat_service.py  knowledge_service.py
settings/: config.py  gemini_client.py
tests/: test_workflow.py
utils/: helper.py
