[project]
name = "rag-interview"
version = "0.1.0"
description = ""
authors = [
    {name = "Huy Dao Ngoc",email = "dnhuy2802@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "google-genai (>=1.24.0,<2.0.0)",
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
